Chnged users path

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,4 +26,8 @@
         </form>
             
     </div>
+    <script>
+        var target = document.getElementById('target');
+        target.innerHTML = 'Log in';
+    </script>
 </body>
