--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,13 +10,6 @@
   <script src="javascripts/nav.js"></script>
   <br><br><br><br>
 
-  <!-- <div class="btn-conatiner">
-    <form action="/logout?_method=DELETE" method="POST">
-      <button class="mobile btn-sub input-div" type="submit">Log out</button>
-    </form>
-  </div>
-  <br><br><br><br> -->
-
   <div class="form-container">
     <div class="post-div">
       <h1 class="mobile"><%= user.username %></h1>
@@ -40,15 +33,15 @@
       <div class="user-info mobile">
         <hr>
         <a href="/changeProfilePic">
-          <img class="profile-pic" width="12%" src="images/<%=user.id%>/profilePic/image.jpg">
+          <img class="profile-pic" width="12%" src="users/<%=user.id%>/images/profilePic/image.jpg">
         </a>
         <p class="profile-name"><%= user.username %></p>
         <hr>
       </div>
 
       <p class="mobile"><%=post.title%></p>
-      <img class="lazy post-img" src="images/<%=user.id%>/<%=post.photo%>_small.jpg"
-        data-src="images/<%=user.id%>/<%=post.photo%>.jpg">
+      <img class="lazy post-img" src="users/<%=user.id%>/images/<%=post.photo%>_small.jpg"
+        data-src="users/<%=user.id%>/images/<%=post.photo%>.jpg">
       <br>
       <p class="mobile"><%=post.description%></p>
 
