--- a/views/search.ejs
+++ b/views/search.ejs
@@ -9,12 +9,25 @@
   <script src="javascripts/nav.js"></script>
   <br><br><br><br>
 
+  <div class="form-container">
+    <div class="post-div">
+      <h1 class="mobile"><%= user.username %></h1>
+
+      <div class="btn-conatiner">
+        <hr>
+        <form action="/follow" method="post">
+          <input type="submit" name="follow" value="Follow" class="mobile btn-sub input-div" />
+        </form>
+        <hr>
+      </div>
+    </div>
+
     <% content.reverse().forEach(function(post) { %>
     <div class="post-div">
 
       <div class="user-info mobile">
         <hr>
-          <img class="profile-pic" width="12%" src="users/<%=user.id%>/images/profilePic/image.jpg">
+        <img class="profile-pic" width="12%" src="users/<%=user.id%>/images/profilePic/image.jpg">
         <p class="profile-name"><%= user.username %></p>
         <hr>
       </div>
@@ -23,7 +36,12 @@
       <img class="lazy post-img" src="users/<%=user.id%>/images/<%=post.photo%>_small.jpg"
         data-src="users/<%=user.id%>/images/<%=post.photo%>.jpg">
       <br>
-      <p class="mobile"><%=post.description%></p>
+      <br>
+      <div class="post-desc">
+        <p class="mobile"><b><%=post.description%></b></p>
+        <p class="mobile-p-date"><%= post.dateAdded %></p>
+        <p class="mobile-p-likes"><b>Likes:</b> <%= post.likes %></p>
+      </div>
 
       <div class="btn-conatiner">
         <hr>
