--- a/views/search.ejs
+++ b/views/search.ejs
@@ -52,7 +52,8 @@
 
         <form method="get" action="/like">
           <input type="hidden" name="post_id" value="<%=post.postid%>" />
-          <input type="submit" class="mobile input-div" value="Like" />
+          <input type="hidden" name="user_id" value="<%=user.id%>" />
+          <input type="submit" id="like" class="mobile input-div" value="<%= post.likeStatus %>" />
         </form>
         <hr>
       </div>
