--- a/views/editUser.ejs
+++ b/views/editUser.ejs
@@ -13,7 +13,7 @@
 
         <form action="/editUser" method="post">
             <input type="hidden" name="photo_name" id="pht" />
-            <input class="mobile input-div" type="text" placeholder="Description" name="description" value="<%= user.description %>" />
+            <input class="mobile input-div" type="text" name="description" value="<%= user.description %>" />
             <br>
             <input class="mobile input-div" type="submit" value="Save"/>
         </form>
