--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,13 +16,14 @@
       </a>
       <h1 class="mobile"><%= user.username %> <a class="btn-edit" href="/editUser">&#9998;</a></h1>
       <div class="profile-name">
-        <p class="mobile-p-date"><b>Followers:</b> <%= user.followers %></p>
-        <p class="mobile-p-likes"><b>Following:</b> <%= user.following %></p>
+        <p class="mobile-p-left"><b><%= user.description %></b></p>
       </div>
       <hr>
       <div class="profile-name">
-        <p><b><%= user.description %></b></p>
+        <p class="mobile-p-left"><b>Followers:</b> <%= user.followers %></p>
+        <p class="mobile-p-right"><b>Following:</b> <%= user.following %></p>
       </div>
+
       <div class="btn-conatiner">
         <hr>
         <form action="/add" method="get">
@@ -52,8 +53,8 @@
       <br>
       <div class="post-desc">
         <p class="mobile"><b><%=post.description%></b></p>
-        <p class="mobile-p-date"><%= post.dateAdded %></p>
-        <p class="mobile-p-likes"><b>Likes:</b> <%= post.likes %></p>
+        <p class="mobile-p-left"><%= post.dateAdded %></p>
+        <p class="mobile-p-right"><b>Likes:</b> <%= post.likes %></p>
       </div>
 
       <div class="btn-conatiner">
