Updated saving and displaying followers/following and likes

--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -11,7 +11,8 @@
   <div class="form-container">
     <h1 class="mobile">Add post</h1>
     <form action="/add" enctype="multipart/form-data" method="post">
-      <textarea rows="4" cols="50" class="mobile input-div" placeholder="Description" type="text" name="description"></textarea>
+      <textarea rows="4" cols="50" class="mobile input-div" placeholder="Description" type="text"
+        name="description"></textarea>
       <br>
       <label class="fileContainer mobile input-div">
         <p>Select image..</p>
