--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,8 +20,8 @@
       </div>
       <hr>
       <div class="profile-name">
-        <p class="mobile-p-left"><b>Followers:</b> <%= user.followers %></p>
-        <p class="mobile-p-right"><b>Following:</b> <%= user.following %></p>
+        <p class="mobile-p-left"><b>Followers:</b> <%= (user.followers).length %></p>
+        <p class="mobile-p-right"><b>Following:</b> <%= (user.following).length %></p>
       </div>
 
       <div class="btn-conatiner">
