--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,16 +15,32 @@
         <img class="profile-pic" width="12%" src="users/<%=user.id%>/images/profilePic/image.jpg">
       </a>
       <h1 class="mobile"><%= user.username %> <a class="btn-edit" href="/editUser">&#9998;</a></h1>
-      <br>
-      <br>
+      <hr style="visibility: hidden;">
       <div class="profile-name">
         <p class="mobile-p-left"><b><%= user.description %></b></p>
         <p class="mobile-p-right"><b>Posts:</b> <%= (content).length %></p>
       </div>
       <hr>
+
       <div class="profile-name">
-        <p class="mobile-p-left"><b>Followers:</b> <%= (user.followers).length %></p>
-        <p class="mobile-p-right"><b>Following:</b> <%= (user.following).length %></p>
+
+        <form method="get" action="/followersList">
+          <input type="hidden" name="user_id" value="<%=user.id%>" />
+          <a href=""  class="clean-link">
+            <p onclick="this.closest('form').submit();return false;" class="mobile-p-left">
+              <b>Followers:</b> <%= (user.followers).length %>
+            </p>
+          </a>
+        </form>
+
+        <form method="get" action="/followingList">
+          <input type="hidden" name="user_id" value="<%=user.id%>" />
+          <a href=""  class="clean-link">
+            <p onclick="this.closest('form').submit();return false;" class="mobile-p-right">
+              <b>Following:</b> <%= (user.following).length %>
+            </p>
+          </a>
+        </form>
 
       </div>
 
@@ -40,7 +56,7 @@
         <hr>
       </div>
     </div>
-    
+
     <% content.reverse().forEach(function(post) { %>
     <div class="post-div">
       <div class="user-info mobile mobile-username">
@@ -57,8 +73,30 @@
       <div class="post-desc">
         <p class="mobile"><b><%=post.description%></b></p>
         <p class="mobile-p-left"><%= post.dateAdded %></p>
-        <p class="mobile-p-right"><b>Likes:</b> <%= (post.likedBy).length %></p>
-        <p class="mobile-p-right"><b>Comments:</b> <%= (post.comments).length %></p>
+        <br>
+      </div>
+      <hr>
+      <div class="profile-name">
+
+        <form method="get" action="/likesList">
+          <input type="hidden" name="post_id" value="<%=post.postid%>" />
+          <input type="hidden" name="user_id" value="<%=user.id%>" />
+          <a href=""  class="clean-link">
+            <p onclick="this.closest('form').submit();return false;" class="mobile-p-right">
+              <b>Likes:</b> <%= (post.likedBy).length %>
+            </p>
+          </a>
+        </form>
+
+        <form method="get" action="/commentsList">
+          <input type="hidden" name="post_id" value="<%=post.postid%>" />
+          <input type="hidden" name="user_id" value="<%=user.id%>" />
+          <a href=""  class="clean-link">
+            <p onclick="this.closest('form').submit();return false;" class="mobile-p-left">
+              <b>Comments:</b> <%= (post.comments).length %>
+            </p>
+          </a>
+        </form>
       </div>
 
       <div class="btn-conatiner">
@@ -82,8 +120,9 @@
     <% }); %>
 
   </div>
-  <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
-  
+  <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
+    crossorigin="anonymous"></script>
+
   <script>
     //  $(document).ready(() => {
     //     $.ajax({
